--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -4,7 +4,7 @@
 body {
     background-image: url("/assets/r2d2.jpg");
     margin: 35px auto;
-    width: 640px;
+    width: 900px;
     font-family: Helvetica;
     background-color: #fff
 }
@@ -18,13 +18,80 @@ h1 {
     color: #E6E6E6;
 }
 
+label {
+    color: #E6E6E6;
+}
+
+.new_post{
+    background-color: black;
+    padding: 5px;
+    margin: 3px;
+    border-radius: 5px;
+    width: 70px;
+    float: left;
+}
+
 .show_button{
     background-color: blue;
-    padding: 2px;
+    padding: 5px;
+    margin: 3px;
+    border-radius: 5px;
+    width: 80px;
+    float: left;
+}
+
+.back_button{
+    background-color: blue;
+    padding: 5px;
+    margin: 3px;
+    border-radius: 5px;
+    width: 37px;
+    float: left;
+}
+
+.edit_button{
+    background-color: green;
+    padding: 5px;
+    margin: 3px;
+    border-radius: 5px;
+    width: 65px;
+    float: left;
+}
+
+.destroy_button{
+    background-color: red;
+    padding: 5px;
     margin: 3px;
     border-radius: 5px;
     width: 82px;
+    float: left;
 }
+
+.up_button{
+    background-color: OrangeRed;
+    padding: 5px;
+    margin: 3px;
+    border-radius: 5px;
+    width: 58px;
+    float: left;
+}
+
+.down_button{
+    background-color: indigo;
+    padding: 5px;
+    margin: 3px;
+    border-radius: 5px;
+    width: 80px;
+    float: left;
+}
+
+a:-webkit-any-link {
+  color: #E6E6E6;
+/*  text-decoration: underline;*/
+  cursor: auto;
+}
+
+a:visited {color:#E6E6E6;}
 
 header h1 {
     color: #E6E6E6;
