--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,12 @@
 <h1> 'Yo Link Faves!' </h1>
-<p><%= link_to 'New post', new_post_path %></p>
+<div class="new_post"><%= link_to 'New Link', new_post_path %></div><br><br>
 <% @posts.each do |post| %>
-  <h2>Website:<%= post.title %></h2>
-  <h3>URL:<%= post.url %></h3>
-  <h3>Votes:<%= post.vote %></h3>
-  <div class="show_button"><%= link_to 'Show Post', post_path(post) %></div>
-  <%= link_to 'Edit post', edit_post_path(post) %>
-  <%= link_to 'Destroy post', post, method: :delete %>
-  <%= link_to 'UpVote!', posts_vote_path(id: post.id) %>
-  <%= link_to 'DownVote!', posts_downvote_path(id: post.id) %>
+  <h2>Website:&nbsp<%= post.title %></h2>
+  <h3>URL:&nbsp<%= post.url %>, Votes:&nbsp<%= post.vote %></h3>
+  
+  <div class="show_button"><%= link_to 'Show Link', post_path(post) %></div>
+  <div class="edit_button"><%= link_to 'Edit Link', edit_post_path(post) %></div>
+  <div class="destroy_button"><%= link_to 'Delete Link', post, method: :delete %></div>
+  <div class="up_button"><%= link_to 'UpVote!', posts_vote_path(id: post.id) %></div>
+  <div class="down_button"><%= link_to 'DownVote!', posts_downvote_path(id: post.id) %></div> <br><br>
 <% end %>
