--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,4 +2,4 @@
 <h2><%= @post.title %></h2>
 <h3><%= @post.url %></h2>
 <p><%= @post.vote %></p>
-<%= link_to 'Back', posts_path %>
+<div class="back_button"><%= link_to 'Back', posts_path %></div>
