--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,9 +10,38 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require rails_bootstrap_forms
  *= require_tree .
  *= require_self
  */
+
+@import "bootstrap-sprockets";
+@import "bootstrap";
+@import "font-awesome";
+
+.boldfont {
+  font-size: 20px;
+}
+
+.panel-default {
+  padding: 10px;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+.gravatar {
+  float: left;
+  margin-right: 10px;
+}
+
+.gravatar_edit {
+  margin-top: 15px;
+}
+
+body {
+    background-image: url("/assets/sky.jpg");
+  }
+
 .change{
   width: 5px;
 }
+
