--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,13 +1,15 @@
 <h1> Edit Post </h1>
-<%= form_for @post do |f| %>
-  <%= f.label :title %>: 
+<%= bootstrap_form_for @post do |f| %>
+  
   <%= f.text_field :title %>
 
-  <%= f.label :url %> 
+  
   <%= f.text_field :url %>
 
  <!--  <%= f.label :vote %>
   <%= f.text_field :vote %> -->
 
-  <%= f.submit %>
+  <%= f.hidden_field :user_id, value: current_user.id %>
+
+  <%= f.submit "Update Link", class: "btn btn-primary" %>
 <% end %>
