--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,8 @@
-<h1> Post </h1>
-<h2><%= @post.title %></h2>
-<h3><%= @post.url %></h2>
-<p><%= @post.vote %></p>
-<%= link_to 'Back', posts_path %>
+<h1> Link </h1>
+<h2><span class="btn btn-warning"><%= "Votes: #{@post.vote}"%></span> Website: <%= @post.title %>&nbsp|&nbsp<span class=boldfont><%= @post.url %></span></h2>
+<%= link_to 'Back', posts_path, class: "btn btn-primary" %>
+<% if @post.user == current_user && user_signed_in? %>
+  <%= link_to "Edit", edit_post_path(@post), class: "btn btn-info"  %>
+  <%= link_to "Delete", @post, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger"   %>
+<% end %>
+
