added panels to all user pages

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -39,6 +39,8 @@
 
 body {
     background-image: url("/assets/sky.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
   }
 
 .change{
