--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="panel panel-default">
 <h1> Edit Post </h1>
 <%= bootstrap_form_for @post do |f| %>
   
@@ -13,3 +14,4 @@
 
   <%= f.submit "Update Link", class: "btn btn-primary" %>
 <% end %>
+</div>
