--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,4 @@
+<div class="panel panel-default">
 <h1> New Post </h1>
 <%= bootstrap_form_for @post do |f| %>
   
@@ -12,3 +13,4 @@
 
   <%= f.submit "Create Post", class: "btn btn-primary" %>
 <% end %>
+</div>
