--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,3 +1,4 @@
+<div class="panel panel-default">
 <h1>All About You: Stuff You Should Already Know</h1>
 <h2><%= @user.name %></h2>
 <h3><%= @user.email %></h3>
@@ -11,3 +12,4 @@
 <% @user.posts.each do |post| %>
   <p><%= link_to post.title, post_path(post) %></p>
 <% end %>
+</div>
