--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<div class="panel panel-default">
 <h1>
   <%= gravatar_for @user %>
   <%= @user.name %>'s Profile
@@ -11,3 +12,4 @@
 <% @user.posts.each do |post| %>
   <p><%= link_to post.title, post_path(post) %></p>
 <% end %>
+</div>
