--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,15 @@
 @import "bootstrap";
 @import "font-awesome";
 
+.headline {
+    color: black;
+    text-shadow:
+    -1px -1px 0 #FFF,
+    1px -1px 0 #FFF,
+    -1px 1px 0 #FFF,
+    1px 1px 0 #FFF; 
+}
+
 .boldfont {
   font-size: 20px;
 }
@@ -38,7 +47,7 @@
 }
 
 body {
-    background-image: url("/assets/sky.jpg");
+    background-image: url("/assets/orange.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
   }
