--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -5,7 +5,7 @@
   <%= f.text_field :title %>
 
   
-  <%= f.text_field :url %>
+  <%= f.url_field :url %>
 
  <!--  <%= f.label :vote %>
   <%= f.text_field :vote %> -->
