--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -5,7 +5,7 @@
   <%= f.text_field :title %>
 
   
-  <%= f.text_field :url %>
+  <%= f.url_field :url %>
   <%= f.hidden_field :user_id, value: current_user.id %>
 
   <%#= f.label :vote %>
