--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<h1>All You Users!</h1>
+<h1 class="headline">All You Users!</h1>
 <% @users.each do |user| %>
 <div class='well'>
   <h2><%= user.name %></h2>
