--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
   <%= @user.bio %>
 </p>
 
-<h3><%= @user.name %>'s Links</h3>
+<h3><%= @user.name %>'s Links:</h3>
 <% @user.posts.each do |post| %>
   <p><%= link_to post.title, post_path(post) %></p>
 <% end %>
